--- a/vivagua_app/pubspec.yaml
+++ b/vivagua_app/pubspec.yaml
@@ -40,7 +40,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+assets:
+  - assets/img/home_background.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
