--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -29,10 +29,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    
-  - assets/login.jpg
-  - assets/home.jpeg
+  - assets/logo.png
   - assets/tick.png
   - assets/avatars/sea_turtle.jpg
+  - assets/logo_darker.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
