--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -33,6 +33,19 @@ flutter:
   - assets/tick.png
   - assets/avatars/sea_turtle.jpg
   - assets/logo_darker.png
+   - assets/lionfish.jpg
+  - assets/green_turtle.jpg
+  - assets/caribbean_reef_shark.jpg
+  - assets/hawksbill_turtle.jpg
+  - assets/lined_seahorse.jpg
+  - assets/mutton_snapper.jpg
+  - assets/parrotfish.jpg
+  - assets/avatars/avatar-1.jpg
+  - assets/avatars/avatar-2.jpg
+  - assets/avatars/avatar-3.jpg
+  - assets/avatars/avatar-4.jpg
+  - assets/avatars/avatar-5.jpg
+  - assets/avatars/avatar-6.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
