--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -33,6 +33,7 @@ flutter:
   - assets/tick.png
   - assets/avatars/sea_turtle.jpg
   - assets/logo_darker.png
+  - assets/choose.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
