--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -33,9 +33,6 @@ flutter:
   - assets/tick.png
   - assets/avatars/sea_turtle.jpg
   - assets/logo_darker.png
-<<<<<<< HEAD
-  - assets/choose.png
-=======
   - assets/lionfish.jpg
   - assets/green_turtle.jpg
   - assets/caribbean_reef_shark.jpg
@@ -43,15 +40,8 @@ flutter:
   - assets/lined_seahorse.jpg
   - assets/mutton_snapper.jpg
   - assets/parrotfish.jpg
-  - assets/avatars/avatar-1.jpg
-  - assets/avatars/avatar-2.jpg
-  - assets/avatars/avatar-3.jpg
-  - assets/avatars/avatar-4.jpg
-  - assets/avatars/avatar-5.jpg
-  - assets/avatars/avatar-6.jpg
->>>>>>> c19e43b222c84df47a946de5d8d2218036178adb
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  - assets/choose.png
+  - assets/success.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
