--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   - assets/avatars/avatar-4.jpg
   - assets/avatars/avatar-5.jpg
   - assets/avatars/avatar-6.jpg
+  - assets/which.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
