--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -4,6 +4,7 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  fluro: "^1.4.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,6 +51,11 @@ flutter:
   - assets/avatars/avatar-5.jpg
   - assets/avatars/avatar-6.jpg
   - assets/which.png
+  - assets/img/earth.png
+  - assets/img/mars.png
+  - assets/img/ic_distance.png
+  - assets/img/ic_gravity.png
+  - assets/home.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
