--- a/dribbbledanimation/android/app/src/main/AndroidManifest.xml
+++ b/dribbbledanimation/android/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
             <meta-data
-                android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyBRx8M6V93K3GUquP1EZGVR0WgIsMrXZZo"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
