--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -31,34 +31,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    
-  - assets/logo.png
-  - assets/tick.png
-  - assets/avatars/sea_turtle.jpg
-  - assets/logo_darker.png
-  - assets/choose.png
-  - assets/lionfish.jpg
-  - assets/green_turtle.jpg
-  - assets/caribbean_reef_shark.jpg
-  - assets/hawksbill_turtle.jpg
-  - assets/lined_seahorse.jpg
-  - assets/mutton_snapper.jpg
-  - assets/parrotfish.jpg
-  - assets/choose.png
-  - assets/success.png
-  - assets/avatars/avatar-1.jpg
-  - assets/avatars/avatar-2.jpg
-  - assets/avatars/avatar-3.jpg
-  - assets/avatars/avatar-4.jpg
-  - assets/avatars/avatar-5.jpg
-  - assets/avatars/avatar-6.jpg
-  - assets/which.png
-  - assets/img/earth.png
-  - assets/img/mars.png
-  - assets/img/ic_distance.png
-  - assets/img/ic_gravity.png
-  - assets/home.png
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
