--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
     sdk: flutter
   flutter_map:
   fluro: "^1.4.0"
+  autocomplete_textfield: ^1.6.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
