--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -7,12 +7,14 @@ dependencies:
   flutter_map:
   fluro: "^1.4.0"
   autocomplete_textfield: ^1.6.4
+  charts_flutter: ^0.6.0
+  charts_common: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   intl: "^0.15.2"
-
+flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
