--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -9,7 +9,8 @@ dependencies:
   autocomplete_textfield: ^1.6.4
   charts_flutter: ^0.5.0
   charts_common: ^0.5.0
-
+  firebase_core:
+  cloud_firestore:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
