--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -5,16 +5,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map:
-  fluro: "^1.4.0"
-  autocomplete_textfield: ^1.6.4
-  charts_flutter: ^0.5.0
-  charts_common: ^0.5.0
+  fluro:
+  autocomplete_textfield:
+  charts_flutter:
+  charts_common:
   firebase_core:
   cloud_firestore:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
-  intl: "^0.15.2"
+  cupertino_icons:
+  intl:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
