--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   charts_common:
   firebase_core:
   cloud_firestore:
+  cloud_functions:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
