--- a/dribbbledanimation/pubspec.yaml
+++ b/dribbbledanimation/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
   intl:
+  carousel_pro: ^0.0.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
