--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,17 +46,31 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Overpass Regular
+      fonts:
+        - asset: fonts/Overpass-Regular.ttf
+    - family: Overpass SemiBold
+      fonts:
+        - asset: fonts/Overpass-SemiBold.ttf
+          weight: 600
+    - family: Overpass ExtraLight
+      fonts:
+        - asset: fonts/Overpass-ExtraLight.ttf
+          weight: 200
+    - family: YanoneKaffeesatz Bold
+      fonts:
+        - asset: fonts/YanoneKaffeesatz-Bold.ttf
+          weight: 700
+    - family: YanoneKaffeesatz Regular
+      fonts:
+        - asset: fonts/YanoneKaffeesatz-Regular.ttf
+          weight: 400
+    - family: YanoneKaffeesatz Light
+      fonts:
+        - asset: fonts/YanoneKaffeesatz-Light.ttf
+          weight: 300
+
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
