--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   cupertino_icons:
   intl:
   carousel_pro: ^0.0.13
+  mailer2: ^1.2.4
+  async: ^2.2.0
+  pdf: ^1.3.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
