--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   cupertino_icons:
   intl:
   carousel_pro: ^0.0.13
-  mailer2: ^1.2.4
+  mailer: ^2.3.0
   async: ^2.2.0
   pdf: ^1.3.7
   smooth_star_rating: 1.0.2
