--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: vivagua
-description: A new Flutter project.
+description: Making conservation easier.
 
 dependencies:
   flutter:
@@ -16,10 +16,9 @@ dependencies:
   cupertino_icons:
   intl:
   carousel_pro: ^0.0.13
-  mailer2: ^1.2.4
+  mailer: ^2.3.0
   async: ^2.2.0
   pdf: ^1.3.7
-  smooth_star_rating: 1.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
