--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   mailer: ^2.3.0
   async: ^2.2.0
   pdf: ^1.3.7
-
+  smooth_star_rating: 1.0.2
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
